Hacky fix for filename wrapping

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -2033,3 +2033,9 @@ table th[data-sortt-desc] {
   margin-top: -.5em;
   margin-bottom: -.5em;
 }
+.break-word {
+  word-break: break-word;
+}
+.break-word-normal {
+  word-break: normal;
+}
